@@ -1,3 +1,8 @@
+2004-07-07  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconftool.c: (do_makefile_uninstall): merge with
+	do_makefile_install() by adding a "unload" flag.
+
 2004-07-05  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: post-release bump to 2.7.4.
